--- a/love.html
+++ b/love.html
@@ -70,15 +70,15 @@
 <div class="container">
     <h1>Happy Valentine’s Day ❤️</h1>
 
-    <p>You are the most beautiful part of my life.</p>
-    <p>Every moment with you feels like a dream come true.</p>
-    <p>On this Valentine’s Day, I just want to say —</p>
+    <p>Thanku for loving me the way you do.</p>
+    <p>You make my heart smile.</p>
+    <p>On this Valentine’s Day and on our 10th anniversary, I just want to say —</p>
     <p><strong>I love you more than words can ever express. ❤️</strong></p>
 </div>
 
 <!-- 🎵 Background Music -->
 <audio id="bgMusic" autoplay loop>
-    <source src="hmm.mp3" type="audio/mpeg">
+    <source src="hmm.mp3" type="audio/mpeg"> 
 </audio>
 
 <script>
@@ -111,3 +111,4 @@
 
 </body>
 </html>
+
