--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
 
-<h1>Jatin ❤️ You Love Me?</h1>
+<h1>❤️Do You Love Me?</h1>
 
 <button id="yesBtn">YES</button>
 <button id="noBtn" style="top:60%; left:55%;">NO</button>
@@ -73,4 +73,5 @@
 </script>
 
 </body>
+
 </html>
